# AGS_SDK

./: .gitattributes  .gitignore  CHANGELOG.md  README.md
ags_lib/: CHANGELOG.md  README.md
ags_lib/doc/: amd_ags.chm
ags_lib/hlsl/: ags_shader_intrinsics_dx11.hlsl  ags_shader_intrinsics_dx12.hlsl
ags_lib/inc/: amd_ags.h
ags_lib/lib/: amd_ags_uwp_x64.lib  amd_ags_uwp_x86.lib  amd_ags_x64.lib  amd_ags_x64_2015_MD.lib  amd_ags_x64_2015_MDd.lib  amd_ags_x64_2015_MT.lib  amd_ags_x64_2015_MTd.lib  amd_ags_x64_2017_MD.lib  amd_ags_x64_2017_MDd.lib  amd_ags_x64_2017_MT.lib  amd_ags_x64_2017_MTd.lib  amd_ags_x64_2019_MD.lib  amd_ags_x64_2019_MT.lib  amd_ags_x64_2022_MD.lib  amd_ags_x64_2022_MT.lib  amd_ags_x86.lib  amd_ags_x86_2015_MD.lib  amd_ags_x86_2015_MT.lib  amd_ags_x86_2017_MD.lib  amd_ags_x86_2017_MT.lib  amd_ags_x86_2019_MD.lib  amd_ags_x86_2019_MT.lib  amd_ags_x86_2022_MD.lib  amd_ags_x86_2022_MT.lib
ags_sample/: CMakeLists.txt
ags_sample/premake/: premake5.lua
ags_sample/src/: AGSSample.cpp
crossfire_sample/: CMakeLists.txt  Readme.html
crossfire_sample/premake/: premake5.lua
crossfire_sample/src/: CFXAPISample.cpp  CFXAPISample.h  Window.cpp  Window.h
crossfire_sample/src/Shaders/: shaders.hlsl
doc/: amd_ags.chm
extensions_sample_dx12/: CMakeLists.txt
extensions_sample_dx12/src/: D3D12Sample.cpp  D3D12Sample.h  ExtensionsSample12.cpp  ExtensionsSample12.h  Main.cpp  Window.cpp  Window.h  shaders.hlsl
eyefinity_sample/: CMakeLists.txt
eyefinity_sample/dxut/Core/: DDSTextureLoader.cpp  DXUT.cpp  DXUT.h  DXUTDevice11.cpp  DXUT_2013.vcxproj  DXUT_2015.vcxproj  DXUT_2017.vcxproj  DXUT_2019.vcxproj  premake5.lua
eyefinity_sample/dxut/Optional/: DXUTOpt_2013.vcxproj  DXUTOpt_2015.vcxproj  DXUTOpt_2017.vcxproj  DXUTOpt_2019.vcxproj  DXUTcamera.h  premake5.lua
eyefinity_sample/media/: readme.txt
eyefinity_sample/premake/: premake5.lua
eyefinity_sample/src/: EyefinitySample.cpp
eyefinity_sample/src/ResourceFiles/: EyefinitySample.rc  resource.h
eyefinity_sample/src/Shaders/: EyefinitySample.hlsl  Line.hlsl
inc/: amd_ags.h
lib/: amd_ags_x64.lib  amd_ags_x86.lib
premake/: ags_update_vs_files.bat  amd_premake_util.lua
